--- a/src/features/settings/settings.scss
+++ b/src/features/settings/settings.scss
@@ -1,8 +1,9 @@
-.SearchFilter {
+.SettingsPage {
   display: flex;
-  padding: 0 20px;
+  flex-direction: column;
+  padding: 20px;
 
-  input {
+  select {
     margin-left: 10px;
     padding: 3px;
   }
